applications/observability-demo/observability-demo-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: observability-demo
  namespace: observability-demo
  labels:
    app: observability-demo
    monitor: springboot
    prometheus: user-workloads
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: https
      protocol: TCP
      port: 8443
      targetPort: 8443
  selector:
    app: observability-demo
