applications/observability-demo/observability-demo-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: observability-demo
  namespace: observability-demo
spec:
  to:
    kind: Service
    name: observability-demo
  port:
    targetPort: http
  tls:
    termination: edge
